--- a/ElectricalRevolution.csproj
+++ b/ElectricalRevolution.csproj
@@ -31,6 +31,11 @@
 		</None>
 	</ItemGroup>
 	
+	
+	<ItemGroup>
+	  <PackageReference Include="SpiceSharp" Version="3.1.5" />
+	</ItemGroup>
+	
 	<Target Name="Package" AfterTargets="PostBuildEvent" Condition="'$(Configuration)' == 'Release'">
 		<ZipDirectory DestinationFile="bin/$(TargetName).zip" SourceDirectory="$(TargetDir)" Overwrite="true" />
 	</Target>
