--- a/ElectricalRevolution.csproj
+++ b/ElectricalRevolution.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net461</TargetFramework>
+		<LangVersion>9</LangVersion>
 	</PropertyGroup>
 	
 	<ItemGroup>
